# agent-control-plane

./: .gitignore  .pre-commit-config.yaml  404.html  BOOKMARKS.md  CLAUDE.md  Makefile  README.md  index.html  renovate.json  sitemap-0.xml  sitemap-index.xml
.github/: component-paths.json
.specify/: sdd-manifest.yaml
.tekton/: acp-api-server-main-pull-request.yaml  acp-api-server-main-push.yaml  acp-mcp-main-pull-request.yaml  acp-mcp-main-push.yaml  acp-runner-main-pull-request.yaml  acp-runner-main-push.yaml  acp-runner-openshell-main-pull-request.yaml  acp-runner-openshell-main-push.yaml  acp-ui-main-pull-request.yaml  acp-ui-main-push.yaml  ambient-code-ambient-api-server-main-pull-request.yaml  ambient-code-ambient-api-server-main-push.yaml  ambient-code-ambient-mcp-main-pull-request.yaml  ambient-code-ambient-mcp-main-push.yaml  ambient-code-ambient-runner-main-pull-request.yaml  ambient-code-ambient-runner-main-push.yaml  ambient-code-ambient-ui-main-pull-request.yaml  ambient-code-ambient-ui-main-push.yaml  ambient-code-backend-main-pull-request.yaml  ambient-code-backend-main-push.yaml  ambient-code-control-plane-main-pull-request.yaml  ambient-code-control-plane-main-push.yaml  ambient-code-credential-github-main-pull-request.yaml  ambient-code-credential-github-main-push.yaml  ambient-code-credential-google-main-pull-request.yaml  ambient-code-credential-google-main-push.yaml  ambient-code-credential-jira-main-pull-request.yaml  ambient-code-credential-jira-main-push.yaml  ambient-code-credential-k8s-main-pull-request.yaml  ambient-code-credential-k8s-main-push.yaml  ambient-code-frontend-main-pull-request.yaml  ambient-code-frontend-main-push.yaml  ambient-code-operator-main-pull-request.yaml  ambient-code-operator-main-push.yaml  ambient-code-public-api-main-pull-request.yaml  ambient-code-public-api-main-push.yaml  control-plane-main-pull-request.yaml  control-plane-main-push.yaml  credential-github-main-pull-request.yaml  credential-github-main-push.yaml  (+6 more)
_astro/: Search.astro_astro_type_script_index_0_lang.BQu_eDWj.js  common.ZFoFvDO9.css  ui-core.BURGXodG.js
components/runners/ambient-runner/: .dockerignore  .mcp.json  Dockerfile  Dockerfile.openshell  claude-settings-local.json  claude-settings.json  claude.json  entrypoint.sh  mcp.json  openshell-claude-wrapper.sh  policy.yaml  pyproject.toml  sdk-options-manifest.json  standard-claude-wrapper.sh
components/runners/ambient-runner/ambient_runner/: _grpc_client.py  _session_events_api.py
components/runners/ambient-runner/ambient_runner/bridges/claude/: auth.py  bridge.py  grpc_transport.py  mcp.py  operational_events.py
components/runners/ambient-runner/ambient_runner/bridges/gemini_cli/: mcp.py
components/runners/ambient-runner/ambient_runner/middleware/: event_compressor.py  grpc_push.py
components/runners/ambient-runner/ambient_runner/platform/: auth.py  config.py  utils.py
components/runners/ambient-runner/tests/: test_event_compressor.py  test_grpc_client.py  test_grpc_push_dual.py  test_grpc_transport.py  test_mcp_config.py  test_operational_events.py  test_sdk_options.py  test_session_events_api.py  test_shared_session_credentials.py
development/: index.html
(+832 files in other folders)
