[project]
name = "ambient-runner"
version = "0.4.0"
description = "Polymorphic AG-UI server — Claude Code, Gemini CLI, Codex SDK"
readme = "CLAUDE.md"
requires-python = ">=3.12"
authors = [
  { name = "vTeam" }
]
dependencies = [
  "fastapi==0.136.3",
  "uvicorn[standard]==0.49.0",
  "ag-ui-protocol==0.1.19",
  "pydantic==2.13.4",
  "aiohttp==3.14.1",
  "requests==2.34.2",
  "pyjwt==2.13.0",
  "cryptography==48.0.1",
  "grpcio==1.81.1",
  "protobuf==6.33.6",
]

[project.optional-dependencies]
claude = [
  "anthropic[vertex]==0.109.2",
  "claude-agent-sdk==0.2.107",
]
observability = [
  "langfuse==4.7.1",
]
mlflow-observability = [
  "mlflow[kubernetes]==3.13.0",
  "opentelemetry-exporter-otlp==1.42.1",
]
mcp-atlassian = [
  "mcp-atlassian==0.21.1",
]
all = [
  "ambient-runner[claude,observability,mlflow-observability,mcp-atlassian]",
]

[dependency-groups]
dev = [
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
  "pytest-cov==7.1.0",
  "ruff==0.15.20",
  "black==26.5.1",
  "httpx==0.28.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
py-modules = ["main"]
packages = ["ag_ui_claude_sdk", "ag_ui_gemini_cli", "ambient_runner", "ambient_runner.endpoints", "ambient_runner.middleware", "ambient_runner.platform", "ambient_runner.bridges", "ambient_runner.bridges.claude", "ambient_runner.bridges.langgraph", "ambient_runner.bridges.gemini_cli"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
